# file_storehouse

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  genindex.html  intro.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.cfg
.github/: release.yml
.github/workflows/: ci.yaml  ci.yml  codeql-analysis.yml  docs.yaml  pre-commit_autoupdate.yml  prepare_release.yaml  publish_on_tag.yaml  tag_on_merged_pull_request.yaml
.semversioner/: 0.1.0.json  0.2.0.json  0.3.0.json  0.3.1.json  0.3.2.json  0.3.3.json  0.3.4.json  0.4.0.json  0.5.0.json
.semversioner/next-release/: minor-20220726191809743457.json  minor-20220726191828248671.json  minor-20220726191848671287.json  minor-20220726191857046441.json  minor-20220726191902052132.json  minor-20220726191925255740.json  minor-20220726191938230607.json  minor-20220726193453949474.json  minor-20220727125339365900.json  minor-20220727125440662280.json  minor-20220727125456876273.json  minor-20220824162419350511.json  minor-20220830112724287223.json  minor-20220830112857432297.json  patch-20220727133146397003.json  patch-20220727155741264048.json  patch-20220727160135485303.json  patch-20220811230128381360.json  patch-20220824203839091496.json  patch-20220824203853764987.json  patch-20220830112632832072.json  patch-20220830112808189647.json
.semversioner/templates/: release.j2
_sources/references/: api-reference.rst
docs/: _config.yml  _toc.yml  intro.md
docs/references/: how-to-contribute.md  what-is-new.md
docs/source/: conf.py  docstrings.rst  index.rst
file_storehouse/: __init__.py  type.py
file_storehouse/engine/: __init__.py  base.py  local_file_system.py  s3.py
file_storehouse/file_manager/: base.py  mapping.py  mutable_mapping.py
file_storehouse/key_mapping/: base.py  numerated_file.py  numerated_folder.py  raw.py
file_storehouse/transformation/: __init__.py  codecs.py  json.py
getting-started/: about.html
myproject/: __init__.py  __main__.py
references/: api-reference.html  how-to-contribute.html  what-is-new.html
src/file_storehouse/: __init__.py  extras.py
src/file_storehouse/engine/: __init__.py  base.py  local_file_system.py  s3.py
src/file_storehouse/file_manager/: __init__.py  mutable_mapping.py
src/file_storehouse/key_mapping/: __init__.py  numerated_folder.py  raw.py
src/file_storehouse/transformation/: base.py
tests/: __init__.py  docker-compose.yml  test_bucket_manager.py  test_key_mapping.py  test_myproject.py  test_user_story.py
tests/engine/: test_local_file_system.py
