[tool.poetry]
name = "MyProject"
version = "0.1.0"
description = ""
authors = ["Jane Doe <jane_doe@some_email.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
mypy = "^0.971"
black = "^22.3.0"
flake8 = "^4.0.1"
flake8-docstrings = "^1.6.0"
pytest = "^7.0"
pytest-cov = "^3.0.0"
pytest-flake8 = "^1.1.1"
pytest-mypy = "^0.9.1"
pytest-mock = "^3.7.0"
isort = "^5.10.1"
pre-commit = "^2.18.1"
semversioner = "^1.1.0"
Sphinx = "^5.0.2"
sphinx-autobuild = "^2021.3.14"
sphinx-last-updated-by-git = "^0.3.2"
sphinx-rtd-theme = "^1.0.0"
pytest-random-order = "^1.0.4"

[tool.mypy]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
