[tool.poetry]
name = "file-storehouse"
version = "0.3.1"
license = "MIT"
description = "Manage files in bulk quantity using a friendly dict-like interface"
authors = ["Felipe N. Schuch <me@fschuch.com>"]
readme = "README.md"
repository = "https://github.com/fschuch/file_storehouse"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Intended Audience :: Developers",
    "Development Status :: 4 - Beta",
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/fschuch/file_storehouse/issues"

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "^1.24.36"

[tool.poetry.dev-dependencies]
mypy = "^0.971"
black = "^22.3.0"
flake8 = "^4.0.1"
flake8-docstrings = "^1.6.0"
pytest = "^7.0"
pytest-cov = "^3.0.0"
pytest-flake8 = "^1.1.1"
pytest-mypy = "^0.9.1"
pytest-mock = "^3.7.0"
isort = "^5.10.1"
pre-commit = "^2.18.1"
semversioner = "^1.1.0"
Sphinx = "^5.0.2"
sphinx-autobuild = "^2021.3.14"
sphinx-last-updated-by-git = "^0.3.2"
sphinx-rtd-theme = "^1.0.0"
pytest-random-order = "^1.0.4"
hypothesis = "^6.52.4"
docker-compose = "^1.29.2"
pytest-docker = "^0.13.0"

[tool.mypy]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
