[build-system]
requires = ["hatchling>=1.21.0", "hatch-vcs>=0.3.0"]
build-backend = "hatchling.build"

[project]
name = "file-storehouse"
description = "Manage files in bulk quantity using a friendly dict-like interface"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "Felipe N. Schuch", email = "me@fschuch.com" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
]
dynamic = ["version"]
dependencies = ["boto3>=1.24.36"]

[project.optional-dependencies]
tests = [
    "coverage[toml]>=7.5.3",
    "hypothesis>=6.52.4",
    "pre-commit>=4.2.0",
    "pytest-cov>=5.0.0",
    "pytest-docker>=3.2.3",
    "pytest>=8.2.2",
    "pyyaml>=5.0.0,!=5.4,!=5.4.1", # pinned to avoid issues with PyYAML 5.4
]
tests-extra = [
    "pytest-randomly==3.16.0",
    "pytest-rerunfailures==15.1",
    "pytest-xdist==3.8.0",
]
docs = [
    "docutils==0.21.2",
    "jupyter-book==1.0.4.post1",
    "sphinx-autobuild==2024.10.3",
    "sphinx==7.4.7",
    "sphinx-github-changelog==1.7.1",
]

[project.urls]
Source = "https://github.com/fschuch/file_storehouse"
Tracker = "https://github.com/fschuch/file_storehouse/issues"
Changelog = "https://docs.fschuch.com/file_storehouse/references/what-is-new.html"
Documentation = "https://docs.fschuch.com/file_storehouse/"

[project.scripts]

[tool.pytest.ini_options]
addopts = [
    "--doctest-modules",
    "--doctest-continue-on-failure",
    "--doctest-report=ndiff",
]

[tool.coverage.run]
branch = true
relative_files = true
source = ["src/file_storehouse", "tests"]
omit = ["src/file_storehouse/_version.py"]

[tool.coverage.report]
fail_under = 90
precision = 2
show_missing = true
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]

[tool.ruff]
extend-exclude = ["./docs/conf.py"]

[tool.ruff.lint.extend-per-file-ignores]
"__init__.py" = ["F401"] # imported but unused
"*.ipynb" = ["E402"]     # module level import not at top of file

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.mypy]
pretty = true
ignore_missing_imports = true
exclude = ["docs/conf.py"]

[tool.codespell]
skip = "docs/conf.py"
check-filenames = true

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/file_storehouse/_version.py"

[tool.hatch.envs.default]
description = "Base development environment"
features = ["tests"]
installer = "uv"

[tool.hatch.envs.default.scripts]
pre-commit-install = "pre-commit install {args}"
pre-commit-uninstall = "pre-commit uninstall {args}"
check = "pre-commit run {args} --all-files"
type = "check mypy {args}"
lint = "check ruff {args}"
format = "check ruff-format {args}"
test = "pytest --cov --cov-report=term {args}"
test-no-cov = "test --no-cov {args}"
qa = ["check", "test", "echo '✅ QA passed'"]

[tool.hatch.envs.test]
description = "Extended test environment"
features = ["tests", "tests-extra"]

[tool.hatch.envs.test.scripts]
extended = "test -n auto --reruns 7 --reruns-delay 1 {args}"

[[tool.hatch.envs.test.matrix]]
python = ["3.9", "3.10", "3.11", "3.12", "3.13"]

[tool.hatch.envs.docs]
description = "Documentation environment"
template = "docs"
features = ["docs"]
installer = "uv"
python = "3.12"

[tool.hatch.envs.docs.scripts]
config = "jupyter-book config sphinx docs {args}"
build = ["config", "jupyter-book build docs --path-output build {args}"]
serve = [
    "config",
    "sphinx-autobuild docs build/_build/html --open-browser --watch src/file_storehouse {args}",
]
